# Roominar

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  setup-dev.sh
backend/: .env.example  main.py
backend/alembic/: env.py
backend/alembic/versions/: 20240811_1607_b0f1d0c18da3_base_user_and_org_model.py  (+29 more)
backend/core/: config.py  constants.py  error_code.py  response.py
backend/db/: database.py
backend/mails/: mail.py
backend/models/: __init__.py  answer.py  application.py  base_model.py  bookmark.py  check_in.py  event.py  event_tag.py  follow.py  organization.py  question.py  question_answer_result.py  questionnaire.py  speaker.py  survey.py  survey_response_result.py  tag.py  tag_association.py  tag_group.py  target.py  ticket.py  ticket_inventory.py  transaction.py  transaction_item.py  user.py  user_tag.py
backend/schemas/: answer.py  application.py  auth.py  check_in.py  common.py  event.py  event_tag.py  organization.py  question.py  question_answer_result.py  questionnaire.py  speaker.py  survey.py  survey_response_result.py  tag.py  target.py  ticket.py  transaction.py  user.py
backend/utils/: database.py  format_start_end_datetime.py  logging.py
frontend/: .env.example  .eslintrc.json  .prettierrc  i18n.ts  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  not-found.tsx
frontend/types/: next-auth.d.ts
(+495 files in other folders)
